--- a/Projects/Analyze Data with R/3_central tendency for housing data.Rmd
+++ b/Projects/Analyze Data with R/3_central tendency for housing data.Rmd
@@ -1,12 +1,13 @@
 ---
-title: "Central Tendency for Housing Data in R"
+title: "R Notebook"
 output: html_notebook
 ---
+
 In this project, you will find the mean, median, and mode cost of one-bedroom apartments in three of the five New York City boroughs: Brooklyn, Manhattan, and Queens.
 
 Using your findings, you will make conclusions about the cost of living in each of the boroughs. We will also discuss an important assumption that we make when we point out differences between the boroughs.
 
-We worked with ![Streeteasy.com](Streeteasy.com) to collect this data. While we will only focus on the cost of one-bedroom apartments, the dataset includes a lot more information if you’re interested in asking your own questions about the Brooklyn, Manhattan, and Queens housing market.
+We worked with [Streeteasy.com](http://Streeteasy.com) to collect this data. While we will only focus on the cost of one-bedroom apartments, the dataset includes a lot more information if you’re interested in asking your own questions about the Brooklyn, Manhattan, and Queens housing market.
 
 ```{r message=FALSE, warning=FALSE, error=TRUE}
 # Load libraries
@@ -17,13 +18,13 @@ library(DescTools)
 
 ```{r message=FALSE, warning=FALSE, error=TRUE}
 # Read in housing data
-brooklyn_one_bed <- read_csv('brooklyn-one-bed.csv')
+brooklyn_one_bed <- read_csv('C:/Users/hotty/Desktop/Codecademy Dev/Codecademy/Projects/Data/streeteasy/brooklyn.csv')
 brooklyn_price <- brooklyn_one_bed$rent
 
-manhattan_one_bed <- read_csv('manhattan-one-bed.csv')
+manhattan_one_bed <- read_csv('C:/Users/hotty/Desktop/Codecademy Dev/Codecademy/Projects/Data/streeteasy/manhattan.csv')
 manhattan_price <- manhattan_one_bed$rent
 
-queens_one_bed <- read_csv('queens-one-bed.csv')
+queens_one_bed <- read_csv('C:/Users/hotty/Desktop/Codecademy Dev/Codecademy/Projects/Data/streeteasy/queens.csv')
 queens_price <- queens_one_bed$rent
 
 ```
@@ -52,7 +53,7 @@ manhattan_mode <- Mode(manhattan_price)
 queens_mode <- Mode(queens_price)
 ```
 
-
+## What does our data tell us?
 ```{r error=TRUE}
 # Don't look below here
 # Mean
