--- a/Projects/Computer Science/CS101-Introduction to Programming/9. Reggies Linear Regression/Reggie_Linear_Regression_Skeleton.ipynb
+++ b/Projects/Computer Science/CS101-Introduction to Programming/9. Reggies Linear Regression/Reggie_Linear_Regression_Skeleton.ipynb
@@ -36,21 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "False\n"
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "def get_y(m, b, x):\n",
-    "  pass\n",
+    "    y = m * x + b\n",
+    "    return y\n",
     "\n",
     "print(get_y(1, 0, 7) == 7)\n",
     "print(get_y(5, 10, 3) == 25)\n"
@@ -77,14 +78,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "#Write your calculate_error() function here"
+    "# calculate_error() function \n",
+    "def calculate_error(m, b, point):\n",
+    "    x_point, y_point = point\n",
+    "    y = m*x_point + b\n",
+    "    distance = abs(y - y_point)\n",
+    "    return distance"
    ]
   },
   {
@@ -132,10 +135,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -155,16 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "#Write your calculate_all_error function here"
+    "# calculate_all_error function  \n",
+    "def calculate_all_error(m, b, datapoints):\n",
+    "    total_error = 0\n",
+    "    for point in datapoints:\n",
+    "        point_error = calculate_error(m, b, point)\n",
+    "        total_error += point_error\n",
+    "    return total_error"
    ]
   },
   {
@@ -176,18 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'calculate_all_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-82106fee0c4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#every point in this dataset lies upon y=x, so the total error should be zero:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdatapoints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcalculate_all_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatapoints\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#every point in this dataset is 1 unit away from y = x + 1, so the total error should be 4:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'calculate_all_error' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "4\n",
+      "18\n"
      ]
     }
    ],
@@ -241,16 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "possible_ms = #your list comprehension here"
+    "possible_ms =  [m * 0.1 for m in range(-100, 101)]"
    ]
   },
   {
@@ -262,16 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "possible_bs = #your list comprehension here"
+    "possible_bs = [b * 0.1 for b in range(-200, 201)]"
    ]
   },
   {
@@ -299,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +306,22 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "datapoints = [(1, 2), (2, 0), (3, 4), (4, 4), (5, 3)]\n",
+    "smallest_error = float(\"inf\")\n",
+    "best_m = 0\n",
+    "best_b = 0\n",
+    "\n",
+    "for m in possible_ms:\n",
+    "    for b in possible_bs:\n",
+    "        error = calculate_all_error(m, b, datapoints)\n",
+    "        if error < smallest_error:\n",
+    "            best_m = m\n",
+    "            best_b = b\n",
+    "            smallest_error = error\n",
+    "            \n",
+    "print(best_m, best_b, smallest_error)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -344,12 +355,14 @@
        "3.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "get_y(m = 0.3, b = 1.7, x = 6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -364,10 +377,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": []
