--- a/Projects/Computer Science/CS101-Introduction to Programming/13. Abruptly Goblins/Abruptly Goblins Planner.ipynb
+++ b/Projects/Computer Science/CS101-Introduction to Programming/13. Abruptly Goblins/Abruptly Goblins Planner.ipynb
@@ -15,10 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gamers = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,10 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_gamer(gamer, gamers_list):\n",
+    "    if gamer.get(\"name\") and gamer.get(\"availability\"):\n",
+    "        gamers_list.append(gamer)\n",
+    "    else:\n",
+    "        print(\"Gamer missing critical information\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +62,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Kimberly Warner', 'availability': ['Monday', 'Tuesday', 'Friday']}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "kimberly = {\n",
+    "    'name': \"Kimberly Warner\",\n",
+    "    'availability': [\"Monday\", \"Tuesday\", \"Friday\"]\n",
+    "}\n",
+    "\n",
+    "add_gamer(kimberly, gamers)\n",
+    "\n",
+    "print(gamers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,10 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_daily_frequency_table():\n",
+    "    return {\n",
+    "        \"Monday\":    0,\n",
+    "        \"Tuesday\":   0,\n",
+    "        \"Wednesday\": 0,\n",
+    "        \"Thursday\":  0,\n",
+    "        \"Friday\":    0,\n",
+    "        \"Saturday\":  0,\n",
+    "        \"Sunday\":    0,\n",
+    "    }\n",
+    "\n",
+    "count_availability = build_daily_frequency_table()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_availability(gamers_list, available_frequency):\n",
+    "    for gamer in gamers_list:\n",
+    "        for day in gamer['availability']:\n",
+    "            available_frequency[day] += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,12 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Monday': 5, 'Tuesday': 4, 'Wednesday': 4, 'Thursday': 6, 'Friday': 3, 'Saturday': 4, 'Sunday': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculate_availability(gamers, count_availability)\n",
+    "print(count_availability)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_best_night(availability_table):\n",
+    "    best_availability = 0\n",
+    "    for day, availability in availability_table.items():\n",
+    "        if availability > best_availability:\n",
+    "            best_night = day\n",
+    "            best_availability = availability\n",
+    "    return best_night"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thursday\n"
+     ]
+    }
+   ],
+   "source": [
+    "game_night = find_best_night(count_availability)\n",
+    "print(game_night)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,6 +262,28 @@
     "* Create a function `available_on_night` that takes two parameters: `gamers_list` and `day` and returns a list of people who are available on that particular day.\n",
     "* Call `available_on_night` with `gamers` and `game_night` and save the result into the variable `attending_game_night`.\n",
     "* Print `attending_game_night`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Thomas Nelson', 'availability': ['Tuesday', 'Thursday', 'Saturday']}, {'name': 'Michelle Reyes', 'availability': ['Wednesday', 'Thursday', 'Sunday']}, {'name': 'Stephen Adams', 'availability': ['Thursday', 'Saturday']}, {'name': 'Joanne Lynn', 'availability': ['Monday', 'Thursday']}, {'name': 'Crystal Brewer', 'availability': ['Thursday', 'Friday', 'Saturday']}, {'name': 'James Barnes Jr.', 'availability': ['Tuesday', 'Wednesday', 'Thursday', 'Sunday']}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def available_on_night(gamers_list, day):\n",
+    "    return [gamer for gamer in gamers_list if day in gamer['availability']]\n",
+    "\n",
+    "attending_game_night = available_on_night(gamers, game_night)\n",
+    "\n",
+    "print(attending_game_night)"
    ]
   },
   {
@@ -213,10 +308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "form_email = \"\"\"\n",
+    "Dear {name},\n",
+    "\n",
+    "The Sorcery Society is happy to host \"{game}\" night and wishes you will attend. Come by on {day_of_week} and have a blast!\n",
+    "\n",
+    "Magically Yours,\n",
+    "the Sorcery Society\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,10 +334,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dear Thomas Nelson,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Thursday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Michelle Reyes,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Thursday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Stephen Adams,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Thursday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Joanne Lynn,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Thursday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Crystal Brewer,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Thursday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear James Barnes Jr.,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Thursday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def send_email(gamers_who_can_attend, day, game):\n",
+    "    for gamer in gamers_who_can_attend:\n",
+    "        print(form_email.format(name=gamer['name'], day_of_week=day, game=game))\n",
+    "        \n",
+    "send_email(attending_game_night, game_night, \"Abruptly Goblins!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,10 +418,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "unable_to_attend_best_night = [gamer for gamer in gamers if game_night not in gamer['availability']]\n",
+    "second_night_availability = build_daily_frequency_table()\n",
+    "calculate_availability(unable_to_attend_best_night, second_night_availability)\n",
+    "second_night = find_best_night(second_night_availability)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,15 +442,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dear Kimberly Warner,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Monday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Joyce Sellers,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Monday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Joanne Lynn,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Monday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Latasha Bryan,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Monday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n",
+      "\n",
+      "Dear Michel Trujillo,\n",
+      "\n",
+      "The Sorcery Society is happy to host \"Abruptly Goblins!\" night and wishes you will attend. Come by on Monday and have a blast!\n",
+      "\n",
+      "Magically Yours,\n",
+      "the Sorcery Society\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "available_second_game_night = available_on_night(gamers, second_night)\n",
+    "send_email(available_second_game_night, second_night, \"Abruptly Goblins!\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -294,9 +514,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
