--- a/Projects/Analyze Data with R/1. Introduction to R/population change.Rmd
+++ b/Projects/Analyze Data with R/1. Introduction to R/population change.Rmd
@@ -1,7 +1,12 @@
 ---
 title: "Calculating Population Change Over Time with R"
 output: html_notebook
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 ---
+You work at the UN in urban planning and are interested in tracking population growth across major metropolitan regions. You are hoping that by looking at historical population numbers that you can predict future growth and help your team make decisions about resourcing.
+
+Use what you’ve learned about the basics of R to calculate the population growth of Istanbul and create a short report.
+
 ```{r error=TRUE}
 calculate_annual_growth <- function(year_one,year_two,pop_y1, pop_y2,city) {
   annual_growth <- (((pop_y2 - pop_y1) / pop_y1) * 100) / (year_two-year_one)
