--- a/Projects/Analyze Data with R/3. Working with Data in R/CoronavirusProject/data_wrangling_on_coronavirus_data.Rmd
+++ b/Projects/Analyze Data with R/3. Working with Data in R/CoronavirusProject/data_wrangling_on_coronavirus_data.Rmd
@@ -5,7 +5,6 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 ---
 
 # Setup
-
 As a reminder, the instructions to this project are formatted in markdown. It will be easiest to read the instructions if you click on "Preview" in RStudio. Doing so will render the markdown to an HTML page for easier reading!
 
 Welcome to your off-platform project focused on Data Manipulation in R! The goal of this project is to get experience working with multiple `.csv` files in RStudio. We'll be creating several data frames and manipulating them to try to find new insights.
@@ -68,22 +67,22 @@ You may want to save these results to variables as they will be useful later!
 # Filter for countries in the northern hemisphere
 total_cases <- covid_confirmed %>% 
   filter(Lat >= 0) %>%
-  select('Country/Region', 'Lat', '3/22/20') %>%
-  summarize(count = n())
+  select(`3/22/20`) %>%
+  sum()
 print(paste('There were a total of', total_cases, 'cases in countries on March 22nd that are north of the equator'))
 
 # Filter for Australia cases
 cases_australia <- covid_confirmed %>%
   filter(`Country/Region` == 'Australia') %>%
-  select('3/22/20') %>%
-  summarize(count = n())
-print(paste('There were a total of', cases_australia, 'confirmed cases in Australia in March 22nd'))
+  select(`3/22/20`) %>%
+  sum()
+print(paste('There were a total of', cases_australia, 'confirmed cases in Australia on March 22nd'))
 
 # Display percentages
 total_world_cases <- covid_confirmed %>%
-  select('3/22/20') %>%
-  summarize(count = n())
-total_world_cases
+  select(`3/22/20`) %>%
+  sum()
+print(paste('There were a total of', total_world_cases, 'in the world on March 22nd'))
 
 # percentage of cases in northern hemisphere to the world
 percentage_northern_hemisphere <- total_cases / total_world_cases * 100 
@@ -109,8 +108,15 @@ After creating this new data frame inspect it. To confirm you did the `group_by(
 
 ```{r}
 # Group by countries
+group_countries <- covid_confirmed %>%
+  group_by(`Country/Region`) %>%
+  summarize_at(vars(-Lat, -Long, -`Province/State`), sum)
+group_countries
 
 # Filter the grouped data set for Australia
+group_countries %>%
+  filter(`Country/Region` == 'Australia') %>%
+  select(`3/22/20`)
 ```
 
 # Investigating The Recovered Dataset
@@ -120,12 +126,34 @@ Do the same process of grouping by country using the recovered dataset. What per
 ```{r}
 # Group by countries
 
+# Total world recovered cases
+total_world_recovered_cases <- covid_recovered %>%
+  select(`3/22/20`) %>%
+  sum()
+#total_world_recovered_cases
+
+# Total US recovered
+group_us_percentage <- covid_recovered %>%
+  group_by(`Country/Region`) %>%
+  summarize_at(vars(-Lat, -Long, -`Province/State`), sum) %>%
+  filter(`Country/Region` == 'US') %>%
+  select(`3/22/20`)
+#group_us_percentage
+
+# Display percentages
+percentage_recovered_us = group_us_percentage / total_world_recovered_cases * 100
+print(paste('There are', percentage_recovered_us, '% of recovered cases in the US'))
 ```
 
 You may see some surprising results &mdash; are there really zero recovered cases in the US? Let's take a closer look at the `US` row in the `recovered` table. Either view the table in RStudio's interface, or print the row in the cell block below. What do you notice about the values as you scroll to March 22nd?
 
 ```{r}
 # Filter to inspect the US row
+recovered_cases_us <- covid_recovered %>%
+  group_by(`Country/Region`) %>%
+  summarize_at(vars(-Lat, -Long, -`Province/State`), sum) %>%
+  filter(`Country/Region` == 'US')
+recovered_cases_us
 ```
 
 It seems like the number of recovered cases is steadily increasing to 17, until March 18th, when it suddenly drops back to 0. This is surprising, and not what we expected! Perhaps we're misunderstanding the format of the data, or perhaps there's an error in reporting the data.
@@ -135,7 +163,18 @@ What's the best course of action at this point? One strategy is to investigate t
 If we wanted to use the current file, instead of reporting the number of confirmed and recovered cases in the US on March 22nd, we could report the maximum number of confirmed and recovered cases. Let's give that a shot using the `max()` function. Make sure to also use `select()` to remove the `Country/Region` column &mdash; we can't take the max of a row if it contains a string.
 ```{r}
 # Find the maximum number of confirmed and recovered cases
+max_recovered <- recovered_cases_us %>%
+  select(-`Country/Region`) %>%
+  max()
 
+max_confirmed_cases_us <- covid_confirmed %>%
+  group_by(`Country/Region`) %>%
+  summarize_at(vars(-Lat, -Long, -`Province/State`), sum) %>%
+  filter(`Country/Region` == 'US') %>%
+  select(-`Country/Region`) %>%
+  max()
+  
+max_recovered / max_confirmed_cases_us * 100
 ```
 
 # Transposing Data Frames
@@ -146,14 +185,25 @@ We could then find the maximum value of a country by simply selecting the approp
 
 ```{r}
 # Transpose the data frame
+group_countries <- covid_confirmed %>%
+  group_by(`Country/Region`) %>%
+  summarize_at(vars(-Lat, -Long, -`Province/State`), sum) 
 
+transposed_confirmed <- group_countries %>%
+  t() %>%
+  as.data.frame()
+transposed_confirmed
 ```
 
 
 Great! We're almost there. But take a look at the column names. We want the column names to be the countries, but instead, the country names are in the first row. We need to figure out how to change the first row of a data frame into column names. Challenge yourself to try to figure this out on your own in the following code block. We'll walk you through our solution in the following section.
 
 ```{r}
-
+header.true <- function(df) {
+  names(df) <- as.character(unlist(df[1,]))
+  df[-1,]
+}
+header.true(transposed_confirmed)
 ```
 
 As usual, we used Google to help solve this problem. Learning how to properly search for answers to your programming questions is an essential skill. In this case,  we specifically searched "r data frame set first row as column names", which led us to a [Stack Overflow page](https://stackoverflow.com/questions/32054368/use-first-row-data-as-column-names-in-r) that suggested using the `janitor` library. That's a cute name for a library &mdash; this `janitor` library will help us clean up our data frame.
@@ -164,7 +214,9 @@ First, we installed and loaded the `janitor` package. Then we passed our transpo
 library(janitor)
 
 # Make the first row the column titles
-
+transposed_confirmed <- transposed_confirmed %>%
+  row_to_names(row_number = 1) 
+head(transposed_confirmed)
 ```
 
 We're getting closer. If you printed the head of the data frame you just created, you might have noticed that the columns are now of type `<fctr>`, or factor. This was one of the side effects of rotating the data frame. We want to turn all of these columns back into doubles.
@@ -177,14 +229,19 @@ Finally, after calling `apply()`, pipe the result through `as.data.frame()` to e
 
 ```{r}
 # Transform the columns to numeric values
-
+transposed_confirmed <- apply(transposed_confirmed, 2, as.numeric) %>%
+  as.data.frame()
+head(transposed_confirmed)
 ```
 
 Nice work - we got there! Let's see what our hard work allows us to do. Let's once again find the maximum number of cases reported in the `US`. To do so, simply select the `US` column and pipe the result to the `max()` function. This should be the same value that we found before we rotate the data frame.
 
 ```{r}
 # Find the maximum number of confirmed cases in the US
-
+max_cases_us <- transposed_confirmed %>%
+  select(US) %>%
+  max()
+max_cases_us
 ```
 
 # Extra Credit: Visualization
@@ -197,7 +254,10 @@ Let's build a line graph showing the number of confirmed cases over time for a p
 
 ```{r}
 # Add the date column
-
+transposed_confirmed <- transposed_confirmed %>% 
+  mutate(date = c(1:nrow(transposed_confirmed)))
+head(select(transposed_confirmed, date))
+transposed_confirmed
 ```
 
 Great! Our date column is all set. Let's now graph the number of cases in Italy over the days in our dataset. We'll use the `ggplot2` library to do this. Use a combination of `ggplot()`, `aes()`, and `geom_line()` to make our graph! Once again, if you're unfamiliar with graphing, try to do some online research to learn how to do this!
@@ -205,7 +265,9 @@ Great! Our date column is all set. Let's now graph the number of cases in Italy 
 ```{r}
 library(ggplot2)
 # Create a line graph with date on the X axis and number of cases in Italy on the Y axis
-
+transposed_confirmed %>% 
+  ggplot(aes(x = date, y = Italy)) + 
+  geom_line()
 ```
 
 That line of code is pretty concise. That's one of the reasons why we wanted to rotate the data frame. Having a column containing only the confirmed cases from a particular country made this graph relatively simple to create.
@@ -214,7 +276,12 @@ Finally, let's do a bit of work to add a title, and to fix the names of the axes
 
 ```{r}
 # Add a proper title, x label, and y label
-
+transposed_confirmed %>% 
+  ggplot(aes(x = date, y = Italy)) + 
+  geom_line() +
+  labs(x = "Number of days since January 22nd, 2020", 
+       y = "Number of confirmed cases", 
+       title = "Confirmed cases of COVID-19 in Italy")
 ```
 
 In the next section we'll give you ideas on ways to continue visualizing this data.
